# FidelityFX-SDK

./: BuildSamplesSolutionDX12_CAS.bat
framework/cauldron/framework/config/: cauldronconfig.json
framework/cauldron/framework/src/: CMakeLists.txt
framework/cauldron/framework/src/render/win/: shaderbuilder_win.cpp
framework/rendermodules/: CMakeLists.txt
samples/: CMakeLists.txt
samples/blur/: CMakeLists.txt
samples/breadcrumbs/: CMakeLists.txt
samples/brixelizergi/: CMakeLists.txt
samples/cacao/: CMakeLists.txt
samples/cas/: CMakeLists.txt
samples/dof/: CMakeLists.txt
samples/hybridreflections/: CMakeLists.txt
samples/hybridshadows/: CMakeLists.txt
samples/parallelsort/: CMakeLists.txt
samples/spd/: CMakeLists.txt
samples/sssr/: CMakeLists.txt
samples/vrs/: CMakeLists.txt
sdk/: BuildFidelityFXSDK.bat
sdk/include/FidelityFX/gpu/cas/: CMakeCompileCASShaders.txt
sdk/src/backends/dx12/: ffx_dx12.cpp
sdk/src/backends/shared/: ffx_shader_blobs.cpp  ffx_shader_blobs.h
sdk/tools/ffx_shader_compiler/src/: hlsl_compiler.cpp
